--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "browser-sync": "^2.27.11",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.49",
+        "laravel-mix-webp": "^0.1.3",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
