--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.57.1",
         "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "swiper": "^9.0.3"
     }
 }
